--- a/courses/templates/courses/krijo_mesim.html
+++ b/courses/templates/courses/krijo_mesim.html
@@ -6,7 +6,7 @@
     <h1>Krijo mesim</h1>
         <form method="post" action="/krijo/mesim">{% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn mb-4 btn-primary">Krijo lende</button>
+            <button type="submit" class="btn mb-4 btn-primary">Crear temas</button>
         </form>
 </div>
 {% endblock %}
