--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,7 +29,7 @@
           <form class="course-search-form">
             <input type="text" placeholder="Course">
             <input type="text" class="last-m" placeholder="Category">
-            <button class="site-btn btn-dark">Search Couse</button>
+            <button class="site-btn btn-dark">Search Course</button>
           </form>
         </div>
       </div>
@@ -67,12 +67,12 @@
           </div>
           <div class="phone-number">
             <span>Direct Line</span>
-            <h2>+2348091356855</h2>
+            <h2>Phone number</h2>
           </div>
           <ul class="contact-list">
-            <li>35 Igando Lane <br>Lagos Nigeria</li>
-            <li>+2348091356855</li>
-            <li>redian1marku@gmail.com</li>
+            <li>Address <br>City, Country</li>
+            <li>Number</li>
+            <li>Email address</li>
           </ul>
           <div class="social-links">
             <a href="#"><i class="fa fa-pinterest"></i></a>
