--- a/users/templates/account/password_reset.html
+++ b/users/templates/account/password_reset.html
@@ -15,12 +15,12 @@
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Keni harruar fjalkalimin? Vendosni emailin tuaj me poshte, dhe ne do tju dergojme nje email duke ju lejuar ta ndryshoni ate." %}</p>
+    <p>{% trans "¿Olvidaste tu contraseña? Ingrese su correo electrónico a continuación y le enviaremos un correo electrónico que le permitirá cambiarlo." %}</p>
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form|crispy }}
-        <input class="btn-primary btn" type="submit" value="{% trans 'Ndrysho Fjalkalimin' %}" />
+        <input class="btn-primary btn" type="submit" value="{% trans 'Cambia la contraseña' %}" />
     </form>
 
     <p>{% blocktrans %} Please contact us if you have any trouble resetting your password. {% endblocktrans %}</p>
