--- a/users/templates/account/password_reset_done.html
+++ b/users/templates/account/password_reset_done.html
@@ -12,5 +12,6 @@
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
     
-    <p>{% blocktrans %}Te kemi derguar nje email. Je lutem na kontaktoni nese nuk e merrni emailin brenda disa minutash!.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Te enviamos un correo electrónico. 
+        Póngase en contacto con nosotros si no recibe el correo electrónico en cuestión de minutos.{% endblocktrans %}</p>
 {% endblock %}
