--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-lg-9">
 
-        <a href="{% url 'blogs:create_post' %}" style="color: white;" class="site-btn">Krijo nje postim</a>
+        <a href="{% url 'blogs:create_post' %}" style="color: white;" class="site-btn">crear nje postim</a>
         {% if posts %}
         {% for post in posts %}
         <!-- blog post -->
