--- a/courses/templates/courses/krijo_klase.html
+++ b/courses/templates/courses/krijo_klase.html
@@ -3,10 +3,10 @@
 
 {% block content %}
 <div class="container">
-    <h1>Krijo klase</h1>
-        <form method="post" action="/krijo/klase" enctype='multipart/form-data'>{% csrf_token %}
+    <h1>crear clase</h1>
+        <form method="post" action="/krijo/Klase" enctype='multipart/form-data'>{% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn mb-4 btn-primary">Krijo klasen</button>
+            <button type="submit" class="btn mb-4 btn-primary">Crear una crear</button>
         </form>
 </div>
 {% endblock %}
