--- a/courses/templates/courses/search_result.html
+++ b/courses/templates/courses/search_result.html
@@ -29,7 +29,7 @@
           <div class="course-item">
               <a href="/courses/{{ lesson.lenda.slug }}/">
             <div class="course-thumb set-bg" data-setbg="{% static 'webuni/img/courses/4.jpg' %}">
-              <iframe width="100%" height="290" src="https://www.youtube.com/embed/{{ lesson.video_id }}?controls=0"  frameborder="0" controls allowfullscreen></iframe>  
+              <iframe width="100%" height="290" src="https://youtube.com/embed/{{ lesson.video_id }}?controls=0"  frameborder="0" controls allowfullscreen></iframe>  
               
             </div>
             <div class="course-info">
