--- a/templates/403.html
+++ b/templates/403.html
@@ -2,6 +2,6 @@
 
 {% block content %}
   <div class="container">
-      <h1 class="m-5">Ju nuk keni leje te vazhdoni ne kete faqe (Error 403)</h1>
+      <h1 class="m-5">No tienes permiso para continuar en esta página (Error 403)</h1>
   </div>
 {% endblock content %}
