--- a/templates/about.html
+++ b/templates/about.html
@@ -18,11 +18,14 @@
     <div class="container mt-5">
 	<div class="row">
 		<div class="col-md-6">
-		    <h1 class='text-primary'>Mirsevini!</h1>
-		    <h2>Mesoni me shume rreth nesh</h2>
+		    <h1 class='text-primary'>¡Bienvenidos!</h1>
+		    <h2>Aprenda más acerca de nosotros</h2>
 		    <hr>
-		    <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore etae magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		    <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore etae magna aliqua. 
+				Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+				 Excepteur sint occaecat cupidatat non proident,
+				  sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		    <button type="button" class="btn btn-primary">Let's Know More</button>
 
 		</div>
