--- a/templates/index.html
+++ b/templates/index.html
@@ -8,22 +8,23 @@
   <div class="container">
     <div class="hero-text text-white">
       {% if request.user.is_authenticated %}
-      <h2>Miresevini {% if request.user.profile.is_teacher == True %}
-         mesues,
+      <h2>Bienvenidos {% if request.user.profile.is_teacher == True %}
+         profesor,
         {% endif %} {{ request.user.username|capfirst }}
 
        
       </h2>
       {% else %}
-      <h2>Kurset me te mira online falas</h2>
+      <h2>Los mejores cursos online gratuitos</h2>
       {% endif %}
-      <p>MesoOn eshte nje platforme online per mesimin e leksioneve shkollore nga nje staff i dedikuar me mesues dhe trajnere me pervoje te cilat do ja u bejne me te lehte mesimin ne nje menyre te lehte me ane te videove.</p>
+      <p>MesoOn es una plataforma en línea para enseñar conferencias escolares a cargo de un personal dedicado de maestros y
+        capacitadores experimentados que facilitará el aprendizaje de una manera fácil a través de videos.</p>
     </div>
     <div class="row">
       <div class="col-lg-10 offset-lg-1">
         <form method="post" action="{% url 'courses:kerko_kurs' %}" class="intro-newslatter"> {% csrf_token %}
           <input name="search" type="text" placeholder="Kerko kursin">
-          <button type="submit" class="site-btn">Kerko kursin</button>
+          <button type="submit" class="site-btn">buscar el curso</button>
         </form>
       </div>
     </div>
@@ -35,8 +36,9 @@
 <section class="categories-section spad">
   <div class="container">
     <div class="section-title">
-      <h2 id="kurset">Kategorite dhe Klasat</h2>
-      <p>Mesimet jane te ndara ne kategori te ndryshme sipas klasave dhe nivelit te tyre. Ti duhet te regjistrohesh fillimisht dhe pastaj te ndjekesh klasen te ciles i perket.</p>
+      <h2 id="kurset">Categorías y crears</h2>
+      <p>Las lecciones se dividen en diferentes categorías según sus crears y nivel.
+         Primero debes registrarte y luego asistir a la crear a la que perteneces.</p>
     </div>
     <div class="row">
       {% for cat in category %}
@@ -49,7 +51,7 @@
             <h5>{{cat.titulli|capfirst}}</h5>
 
             <p>{{ cat.pershkrimi|capfirst }}</p>
-            <span><a class="btn btn-success" href="/courses/{{ cat.id }}">Shiko lendet</a></span>
+            <span><a class="btn btn-success" href="/courses/{{ cat.id }}">mira los temas</a></span>
           </div>
         </div>
       </div>
@@ -63,8 +65,8 @@
 <section class="course-section spad">
   <div class="container">
     <div class="section-title mb-0">
-      <h2>Shembuj kursesh</h2>
-      <p class="pb-3">Keto jani disa shembuj te kurseve te cilet nxensit ndjekin ne platformen tone.</p>
+      <h2>Ejemplos de cursos</h2>
+      <p class="pb-3">Estos son algunos ejemplos de cursos a los que asisten los alumnos en nuestra plataforma.</p>
     </div>
   </div>
   <div class="course-warp">                                     
@@ -73,18 +75,18 @@
       <div class="mix col-lg-3 col-md-4 col-sm-6 finance">
         <div class="course-item">
           <div class="course-thumb set-bg" data-setbg="{% static 'webuni/img/courses/4.jpg' %}">
-            <iframe width="100%" height="290" src="https://www.youtube.com/embed/EexyBwBG9dM?controls=0"  frameborder="0" controls allowfullscreen></iframe>  
+            <iframe width="100%" height="290" src="https://youtube.com/embed/EexyBwBG9dM?controls=0"  frameborder="0" controls allowfullscreen></iframe>  
             
           </div>
           <div class="course-info">
             <div class="course-text">
-              <h5>Gjeometri</h5>
-              <p>Matemetika 10</p>
-              <div class="students">Klasa 10</div>
+              <h5>crear 1</h5>
+              <p>crear 2</p>
+              <div class="students">crear 10</div>
             </div>
             <div class="course-author">
               <div class="ca-pic set-bg" data-setbg="{% static 'webuni/img/authors/4.jpg' %}"></div>
-              <p>Emri Mbiemri, <span>Mesuesit</span></p>
+              <p>nombre Apellido, <span>Profesores</span></p>
             </div>
           </div>
         </div>
@@ -93,7 +95,7 @@
       <div class="mix col-lg-3 col-md-4 col-sm-6 design">
         <div class="course-item">
           <div class="course-thumb set-bg" data-setbg="{% static 'webuni/img/courses/4.jpg' %}">
-            <iframe width="100%" height="290" src="https://www.youtube.com/embed/mNJ06S60B9k?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="290" src="https://youtube.com/embed/mNJ06S60B9k?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="course-info">
             <div class="course-text">
@@ -103,7 +105,7 @@
             </div>
             <div class="course-author">
               <div class="ca-pic set-bg" data-setbg="{% static 'webuni/img/authors/4.jpg' %}"></div>
-              <p>Emri Mbiemri, <span>Mesuesit</span></p>
+              <p>Nombre Apellido, <span>profesores</span></p>
             </div>
           </div>
         </div>
@@ -112,17 +114,17 @@
       <div class="mix col-lg-3 col-md-4 col-sm-6 web">
         <div class="course-item">
           <div class="course-thumb set-bg" data-setbg="{% static 'webuni/img/courses/4.jpg' %}">
-            <iframe width="100%" height="290" src="https://www.youtube.com/embed/3Q_oYDQ2whs?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="290" src="https://youtube.com/embed/3Q_oYDQ2whs?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="course-info">
             <div class="course-text">
-              <h5>Trigonometri</h5>
-              <p>Marematika</p>
-              <div class="students">Klasa 11</div>
+              <h5>class 3</h5>
+              <p>class33</p>
+              <div class="students">crear 11</div>
             </div>
             <div class="course-author">
               <div class="ca-pic set-bg" data-setbg="{% static 'webuni/img/authors/4.jpg' %}"></div>
-              <p>Emri Mbiemri, <span>Mesuesit</span></p>
+              <p>Nombre Apellido, <span>profesores</span></p>
             </div>
           </div>
         </div>
@@ -131,7 +133,7 @@
       <div class="mix col-lg-3 col-md-4 col-sm-6 photo">
         <div class="course-item">
           <div class="course-thumb set-bg" data-setbg="{% static 'webuni/img/courses/4.jpg' %}">
-            <iframe width="100%" height="290" src="https://www.youtube.com/embed/LQFsEwcCO1E?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="290" src="https://youtube.com/embed/LQFsEwcCO1E?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="course-info">
             <div class="course-text">
@@ -141,7 +143,7 @@
             </div>
             <div class="course-author">
               <div class="ca-pic set-bg" data-setbg="{% static 'webuni/img/authors/4.jpg' %}"></div>
-              <p>Emri Mbiemri, <span>Mesuesit</span></p>
+              <p>Nombre Apellido, <span>profesores</span></p>
             </div>
           </div>
         </div>
@@ -157,13 +159,14 @@
 <!-- signup section -->
 {% if request.user.profile.is_teacher == True %}
 <div class="container">
-  <h1 class="text-center">Llogaria juaj ka akses mesuesi</h1><br>
-  <p class="text-center">Duke pasur nje llogari mesuesi ju tashme keni akses me te plote ne kete platform. Ju mund te kryeni me shume funksione se llogaria fillestare e nxenesit. Disa nga keto funksione jane:</p>
+  <h1 class="text-center">Tu cuenta tiene acceso de profesor</h1><br>
+  <p class="text-center">Al tener una cuenta de maestro, ya tiene acceso completo a esta plataforma. 
+    Puede realizar más funciones que la cuenta inicial del alumno. Algunas de estas funciones son:</p>
 
   <div data-aos="fade-right" class="row mt-4 mb-4 bg-light">
     <div class="col-md-4 text-center">
-      <h3 class="p-4">Ju mund te krijoni klasen tuaj</h3> 
-      <a href="{% url 'courses:krijo_klase' %}" class="btn btn-outline-primary m-4">Krijo klasen</a>
+      <h3 class="p-4">Puedes crear tu propia crear.</h3> 
+      <a href="{% url 'courses:crear_clase' %}" class="btn btn-outline-primary m-4">Crear una crear</a>
     </div>
     <div class="col-md-8">
       <img class="img-fluid w-100" src="{% static 'webuni/img/categories/4.jpg' %}" alt="">
@@ -176,15 +179,15 @@
       </div>
   
     <div class="col-md-4 text-center">
-      <h3 class="p-4">Ju mund te krijoni lendet tuaja</h3> 
-      <a href="{% url 'courses:krijo_lende' %}" class="btn btn-outline-primary m-4">Krijo lenden</a>
+      <h3 class="p-4">Puedes crear tus propios temas.</h3> 
+      <a href="{% url 'courses:crear_lende' %}" class="btn btn-outline-primary m-4">Crea el asunto</a>
   </div>
 </div>
 
 <div data-aos="fade-right" class="row mt-4 mb-4 bg-light">
   <div class="col-md-4 text-center">
-    <h3 class="p-4">Ju mund te ngarkoni mesimet dhe videot tuaja.</h3> 
-    <a href="{% url 'courses:krijo_mesim' %}" class="btn btn-outline-primary m-4">Krijo mesimin</a>
+    <h3 class="p-4">Puedes subir tus propios tutoriales y videos.</h3> 
+    <a href="{% url 'courses:crear_mesim' %}" class="btn btn-outline-primary m-4">Crear la lección</a>
   </div>
   <div class="col-md-8">
     <img class="img-fluid w-100" src="{% static 'webuni/img/categories/1.jpg' %}" alt="">
@@ -200,12 +203,12 @@
       <div class="col-lg-6">
         <div class="signup-warp">
           <div class="section-title text-white text-left">
-            <h2>Regjistrohu si mesues</h2>
-            <p>Per tu regjistruar si mesues ne platforme ju duhet te plotesoni fushat e meposhtme dhe me pas do te keni aksesin e plote per te ngarkuar kurse dhe video.</p>
-            
+            <h2>Regístrate como profesor</h2>
+            <p>Para registrarte como docente en la plataforma debes llenar los siguientes campos y
+               luego tendrás acceso completo para subir cursos y videos.</p>
           </div>
           <!-- signup form -->
-          <form action="/kerkesa/" method="post" class="signup-form">{% csrf_token %}
+          <form action="/solicitud/" method="post" class="signup-form">{% csrf_token %}
             <input type="text" placeholder="Emri juaj" name="name">
             <input type="text" placeholder="Emaili" name="e-mail">
             <input type="text" placeholder="Numri i telefonit" name="phone">
