--- a/users/templates/account/login.html
+++ b/users/templates/account/login.html
@@ -5,7 +5,7 @@
 {% load account socialaccount %}
 
 {% block head_title %}{% trans "Hyr ne platforme" %}{% endblock %}
-<h1 class="entry-title">{% block blockname %} Hyr ne Platform   {% endblock blockname %} </h1>
+<h1 class="entry-title">{% block blockname %} Ingresa a la Plataforma   {% endblock blockname %} </h1>
 
 {% block content %}
 
@@ -20,14 +20,15 @@
 </div>
 <div class='col-lg-10 offset-md-1 mt-5 mb-4 p-4' >
 
-    <h1>{% trans "Hyr ne Platforme" %}</h1>
+    <h1>{% trans "Ingresa a la Plataforma" %}</h1>
 
     {% get_providers as socialaccount_providers %}
 
     {% if socialaccount_providers %}
 
-    <p>{% blocktrans with site.name as site_name %}Ju lutem hyni me nje nga adresat e juaja ekzistuese Ose, <a href="{{ signup_url }}">regjistrohuni</a>
-    per nje adrese{{ site_name }} dhe pastaj hyni duke klikuar me poshte:{% endblocktrans %}</p>
+    <p>{% blocktrans with site.name as site_name %}Inicie sesión con una de sus direcciones existentes o, 
+      <a href="{{ signup_url }}">Registrarse</a>
+      para una dirección{{ site_name }} y luego inicie sesión haciendo clic a continuación: {% endblocktrans %}</p>
 
     <div class="socialaccount_ballot">
 
@@ -35,15 +36,15 @@
         {% include "socialaccount/snippets/provider_list.html" with process="login" %}
         </ul>
 
-        <div class="login-or">{% trans 'ose' %}</div>
+        <div class="login-or">{% trans 'o' %}</div>
 
     </div>
 
     {% include "socialaccount/snippets/login_extra.html" %}
 
     {% else %}
-    <p>{% blocktrans %}Nese nuk keni krijuar nje adrese akoma, ju lutem
-    <a href="{{ signup_url }}">regjistrohuni</a> fillimisht.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Si aún no ha creado una dirección, por favor
+    <a href="{{ signup_url }}">Registrarse</a>inicialmente.{% endblocktrans %}</p>
     {% endif %}
 
     <form class="login" method="POST" action="{% url 'account_login' %}">
@@ -52,8 +53,8 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Keni harruar fjalkalimin?" %}</a>
-        <button class="primaryAction btn btn-primary" type="submit">{% trans "Hyr" %}</button>
+        <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "¿Olvidaste tu contraseña?" %}</a>
+        <button class="primaryAction btn btn-primary" type="submit">{% trans "Inscribirse" %}</button>
     </form>
 
 </div>
