--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -26,7 +26,7 @@
         <div class="col-lg-10 offset-lg-1">
           <!-- search form -->
           <form method="post" action="{% url 'courses:kerko_kurs' %}" class="intro-newslatter"> {% csrf_token %}
-            <input name="search" type="text" placeholder="Kerko kursin">
+            <input name="search" type="text" placeholder="Buscar curso...">
             <button type="submit" class="site-btn btn-dark">buscar el curso</button>
           </form>
         </div>
@@ -55,7 +55,7 @@
               </div>
               <div class="course-author">
                 <div class="ca-pic set-bg" data-setbg="{{ request.user.profile.profile_pic.url }}"></div>
-                <p>Krijuar nga : {{course.creador|capfirst}}, <span>Profesor</span></p>
+                <p>Krijuar nga : {{course.krijues|capfirst}}, <span>Profesor</span></p>
               </div>
             </div>
           </div>
