--- a/courses/templates/courses/search_result.html
+++ b/courses/templates/courses/search_result.html
@@ -12,8 +12,8 @@
         <br><br>
         <br>
         <form method="post" action="{% url 'courses:kerko_kurs' %}" class="intro-newslatter"> {% csrf_token %}
-          <input name="search" type="text" placeholder="Kerko kursin">
-          <button type="submit" class="site-btn">Kerko kursin</button>
+          <input name="search" type="text" placeholder="Buscar curo">
+          <button type="submit" class="site-btn">Buscar curo</button>
         </form>
       </div>
     </div>
