--- a/users/templates/account/login.html
+++ b/users/templates/account/login.html
@@ -44,7 +44,7 @@
 
     {% else %}
     <p>{% blocktrans %}Si aún no ha creado una dirección, por favor
-    <a href="{{ signup_url }}">Registrarse</a>inicialmente.{% endblocktrans %}</p>
+    <a href="{{ signup_url }}">Registrarse</a> inicialmente.{% endblocktrans %}</p>
     {% endif %}
 
     <form class="login" method="POST" action="{% url 'account_login' %}">
@@ -54,7 +54,7 @@
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
         <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "¿Olvidaste tu contraseña?" %}</a>
-        <button class="primaryAction btn btn-primary" type="submit">{% trans "Inscribirse" %}</button>
+        <button class="primaryAction btn btn-primary" type="submit">{% trans "Ingresar" %}</button>
     </form>
 
 </div>
