Fixed compability problems, translated some words and must to be logged to share a post

--- a/blog/templates/blog/create_post.html
+++ b/blog/templates/blog/create_post.html
@@ -11,12 +11,11 @@
         {% csrf_token %}
         <label for="">Título*</label>
         <input type="text" class="form-control" name="title" placeholder="Título de la entrada ...">
-        <label for="">Correo*</label>
+        <label for="">Texto*</label>
         <textarea class="form-control" name="text" id="" cols="30" rows="10" placeholder="Publicar Contenido ..."></textarea>
         <br>
-        <button class="site-btn">crear correo</button>
+        <button class="site-btn">crear publicación</button>
     </form>
-
 </div>
 <br>
 {% endblock %}
