--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-lg-9">
 
-        <a href="{% url 'blogs:create_post' %}" style="color: white;" class="site-btn">crear nje postim</a>
+        <a href="{% url 'blogs:create_post' %}" style="color: white;" class="site-btn">crear una publicación</a>
         {% if posts %}
         {% for post in posts %}
         <!-- blog post -->
@@ -42,21 +42,21 @@
       <div class="col-lg-3 col-md-5 col-sm-9 sidebar">
         <div class="sb-widget-item">
           <form class="search-widget">
-            <input type="text" placeholder="Kerko">
+            <input type="text" placeholder="Buscar">
             <button><i class="fa fa-search"></i></button>
           </form>
         </div>
         <div class="sb-widget-item">
-          <h4 class="sb-w-title">Klasat</h4>
+          <h4 class="sb-w-title">Aulas</h4>
           <ul>
-            <li><a href="#">Programim</a></li>
-            <li><a href="#">Rrjete sociale</a></li>
-            <li><a href="#">Lajmet</a></li>
-            <li><a href="#">Eventet</a></li>
+            <li><a href="#">Programador</a></li>
+            <li><a href="#">Redes sociales</a></li>
+            <li><a href="#">Noticias</a></li>
+            <li><a href="#">Eventos</a></li>
           </ul>
         </div>
         <div class="sb-widget-item">
-          <h4 class="sb-w-title">Arkiva</h4>
+          <h4 class="sb-w-title">cancillería</h4>
           <ul>
             <li><a href="#">February 2018</a></li>
             <li><a href="#">March 2018</a></li>
