Deleted repeated resources

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
     <div class="section-title">
       <h2 id="kurset">Categorías y Clases</h2>
       <p>Las lecciones se dividen en diferentes categorías según su nivel.
-         Primero debes registrarte y luego asistir a la clase a la que perteneces.</p>
+         Primero debes registrarte y luego asistir a la clase a la que desees.</p>
     </div>
     <div class="row">
       {% for cat in category %}
